Made fixes to aria-roles, text alt, and horizontal scrolling

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,11 @@
 @charset "utf-8";
 /* CSS Document */
 
+html {
+	max-width: 100%;
+	overflow-x: hidden;
+}
+
 body,td,th,p{
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
